--- a/index.html
+++ b/index.html
@@ -1,36 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>start file css grid</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Saad Aslam Ali</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-
-    <nav class="menu">
-        <a href="#creativecoding">Creative Technology</a>
-        <a href="#motiongraphics">Motion Graphics</a>
-        <a href="#webdesign">Web Design</a>
-
-    </nav>
-
-    <section class="parent1" id="creativecoding">
-        <article class="a1"><h1>Creative Technology</h1></article>
-        <article class="a3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto illum, commodi asperiores reiciendis porro minima earum adipisci error officiis maiores voluptate neque natus at voluptatem quidem dignissimos explicabo dolores modi.</article>
+    <section class="container1">
+        <h1>SAAD ASLAM ALI</h1>
     </section>
-    
-    <section class="parent1" id="motiongraphics">
-        <article class="a1"><h1>Motion Graphics</h1></article>
-        <article class="a3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto illum, commodi asperiores reiciendis porro minima earum adipisci error officiis maiores voluptate neque natus at voluptatem quidem dignissimos explicabo dolores modi.</article>
-
+    <section class="navbar">
+        <div class="navitem"><a href="index.html">Home</a></div>
+        <div class="navitem"><a href="styleguide.html">Style Guide</a></div>
+        <div class="navitem"><a href="inspiration.html">Inspiration</a></div>
+    </section>
+    <section class="container4">
+        <section class="container3">
+            <div class="title2">
+                <h2>Project Description</h2>
+            </div>
+            <section class="bodytext4">
+                Hi! I'm Saad.
+            </section>
+            <section class="bodytext4">
+                I have a background in electrical engineering, but also like making art and music.
+            </section>
+            <section class="bodytext4">For the past year, I've been working on a few personal and professional projects
+                that combine my passion for design and technology. </section>
+            <section class="bodytext4">
+                The purpose of this website is to be a portfolio which showcases these projects in an engaging,
+                interactive way.
+            </section>
+        </section>
+        <figure class="containerimg"><img src="assets/1.png" alt="Interactive JavaScript Visuals">
+        </figure>
     </section>
 
-    <section class="parent1" id="webdesign">
-        <article class="a1"><h1>Web Design</h1></article>
-        <article class="a3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto illum, commodi asperiores reiciendis porro minima earum adipisci error officiis maiores voluptate neque natus at voluptatem quidem dignissimos explicabo dolores modi.</article>
-
+    <section class="container6">
+        <div class="title2"> <h2>User Interface Examples</h2></div>
+        <section class="container5">
+            <figure class="containerimg"><img src="assets/2.png" alt="Figma UI Screenshot 1">
+            </figure>
+            <figure class="containerimg"><img src="assets/4.png" alt="Figma UI Screenshot 2">
+            </figure>
+        </section>
+        <figure class="containerimg2"><img src="assets/3.png" alt="Figma UI Screenshot 3">
+        </figure>
     </section>
-
+    <footer><div class="bodytext5">DART349 MIDTERM PROJECT- SAAD ASLAM ALI</footer>
 </body>
 </html>
