--- a/index.html
+++ b/index.html
@@ -5,51 +5,228 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saad Aslam Ali</title>
-    <link rel="stylesheet" href="css/style.css">
+    <script src="https://unpkg.com/hydra-synth"></script>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="jquery-3.7.1.min.js"></script>
+
+
 </head>
 
 <body>
-    <section class="container1">
+    <section class="anim8">
+    <section class="title">
         <h1>SAAD ASLAM ALI</h1>
     </section>
+</section>
+<section class="cont3">
     <section class="navbar">
-        <div class="navitem"><a href="index.html">Home</a></div>
-        <div class="navitem"><a href="styleguide.html">Style Guide</a></div>
-        <div class="navitem"><a href="inspiration.html">Inspiration</a></div>
+        <div class="navitem"><a href="#a1">About</a></div>
+        <div class="navitem"><a href="#a2">We Were Here</a></div>
+        <div class="navitem"><a href="#a3">Some Thoughts I Had</a></div>
+        <div class="navitem"><a href="#a4">Groove Into The Void</a></div>
+        <div class="navitem"><a href="#a5">Kayal</a></div>
     </section>
-    <section class="container4">
-        <section class="container3">
-            <div class="title2">
-                <h2>Project Description</h2>
+</section>
+<div id="a1"></div>
+    <div class="linediv"></div>
+    <section  class="container2">
+        <section class="grida1">
+            <div class="flexconta">
+                <div class="flexcont1">
+                    <div class="bodytext1">
+                        Montreal, Canada
+                    </div>
+                </div>
+                <div class="flexcont1">
+                    <div class="bodytext1">
+                        Karachi, Pakistan
+                    </div>
+                </div>
             </div>
-            <section class="bodytext4">
-                Hi! I'm Saad.
-            </section>
-            <section class="bodytext4">
-                I have a background in electrical engineering, but also like making art and music.
-            </section>
-            <section class="bodytext4">For the past year, I've been working on a few personal and professional projects
-                that combine my passion for design and technology. </section>
-            <section class="bodytext4">
-                The purpose of this website is to be a portfolio which showcases these projects in an engaging,
-                interactive way.
-            </section>
-        </section>
-        <figure class="containerimg"><img src="assets/1.png" alt="Interactive JavaScript Visuals">
-        </figure>
-    </section>
 
-    <section class="container6">
-        <div class="title2"> <h2>User Interface Examples</h2></div>
-        <section class="container5">
-            <figure class="containerimg"><img src="assets/2.png" alt="Figma UI Screenshot 1">
-            </figure>
-            <figure class="containerimg"><img src="assets/4.png" alt="Figma UI Screenshot 2">
-            </figure>
+            <div class="flexcontb">
+                <div class="flexcont2">
+                    <div class="bodytext3">
+                        Web Design
+                    </div>
+                </div>
+                <div class="flexcont2">
+                    <div class="bodytext3">
+                        Motion Graphics
+                    </div>
+                </div>
+
+
+                <div class="flexcont2">
+                    <div class="bodytext3">
+                        Creative Coding
+                    </div>
+                </div>
+
+                <div class="flexcont2">
+                    <div class="bodytext3">
+                        New Media Art
+                    </div>
+                </div>
+            </div>
+            <div class="flexconta">
+
+                <div class="flexcont1">
+                    <div class="bodytext2">
+                        saadaslamali@gmail.com
+                    </div>
+                </div>
+                <div class="flexcont1">
+                    <div class="bodytext2">
+                        instagram.com/saadaslamali
+                    </div>
+                </div>
+            </div>
         </section>
-        <figure class="containerimg2"><img src="assets/3.png" alt="Figma UI Screenshot 3">
-        </figure>
+        <section class="grida2">
+            <canvas id="hydra-bg">
+                <div class="content">
+                </div>
+            </canvas>
+        </section>
     </section>
-    <footer><div class="bodytext5">DART349 MIDTERM PROJECT- SAAD ASLAM ALI</footer>
+    <div  id="a2" ></div>
+    <div class="linediv"></div>
+
+    <section class="container1">
+        <section class="grida1">
+            <img src="assets/a2.png" alt="We Were Here">
+        </section>
+
+        <section class="grida2">
+            <div class="flexconta">
+                <div class="flexcont1">
+                    <h2>We Were Here</h2>
+                </div>
+            </div>
+            <div class="flexcontb">
+                <div class="flexcont1">
+                    <div class="bodytext2">
+                        Repurposing family photographs that were destroyed during the Karachi floods in 2020.
+                    </div>
+                </div>
+            </div>
+            <div class="flexconta">
+                <div class="flexcont1">
+                    <div class="bodytext1">
+                        Interactive Installation, Animation, Mixed-Media Collage
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </section>
+    <div id="a3"></div>
+    <div class="linediv"></div>
+
+    <section class="container2">
+
+
+        <section class="grida1">
+            <div class="flexconta">
+                <div class="flexcont2">
+                    <h2>Some Thoughts I Had</h2>
+                </div>
+            </div>
+            <div class="flexcontb">
+                <div class="flexcont2">
+                    <div class="bodytext2">
+                        A self published mixed-media zine that uses augmented reality to visualize thoughts.
+                    </div>
+                </div>
+            </div>
+            <div class="flexconta">
+                <div class="flexcont2">
+                    <div class="bodytext1">
+                        Augmented Reality, Drawing, Mixed-Media Animation
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <section class="grida2">
+            <img src="assets/a3.png" alt="Some Thoughts I Had">
+        </section>
+    </section>
+    <div id="a4"></div>
+    <div class="linediv"></div>
+
+    <section class="container1">
+        <section class="grida1">
+            <img src="assets/a1.png" alt="Groove Into The Void">
+        </section>
+
+        <section class="grida2">
+            <div class="flexconta">
+                <div class="flexcont1">
+                    <h2>Groove Into The Void</h2>
+                </div>
+            </div>
+            <div class="flexcontb">
+                <div class="flexcont1">
+                    <div class="bodytext2">
+                        Animated Poster Design
+                    </div>
+                </div>
+                <div class="flexcont1">
+                    <div class="bodytext2">
+                        Livecoded Audiovisual Performance
+                    </div>
+                </div>
+            </div>
+            
+            <div class="flexconta">
+                <div class="flexcont1">
+                    <div class="bodytext1">
+                        Motion Graphics, Poster Design, Livecoded Visuals
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </section>
+    <div id="a5"></div>
+    <div class="linediv"></div>
+
+    <section class="container2">
+
+
+        <section class="grida1">
+            <div class="flexconta">
+                <div class="flexcont2">
+                    <h2>Kayal</h2>
+                </div>
+            </div>
+            <div class="flexcontb">
+                <div class="flexcont2">
+                    <div class="bodytext2">
+                        Using Stable Diffusion to bring block prints to life
+                    </div>
+                </div>
+            </div>
+
+            <div class="flexconta">
+                <div class="flexcont2">
+                    <div class="bodytext1">
+                        Motion Graphics, Animation, Design
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <section class="grida2">
+            <img src="assets/a4.png" alt="Kayal">
+        </section>
+    </section>
+    <div class="linediv"></div>
+    
+
 </body>
+
 </html>
