--- a/index.html
+++ b/index.html
@@ -14,11 +14,25 @@
 </head>
 
 <body>
-    <section class="anim8">
-    <section class="title">
-        <h1>SAAD ASLAM ALI</h1>
+    <a href="#a1">
+        <video autoplay loop muted poster="assets/k5.png" id="bgvid">
+            <source src="assets/kintext1.mp4" type="video/mp4">
+        </video>
+    <div class="anim1">
+    <img src="assets/k4_1_1.png" alt="Warped Title Text1">
+   </div>
+   <div class="anim2">
+   <img src="assets/k3_1.png" alt="Warped Title Text2">
+</div> 
+<div class="anim3">
+        <img src="assets/k2_1.png" alt="Warped Title Text3">
+    </div> 
+    <div class="anim4" id="a1">
+        <img src="assets/k1_1.png" alt="Warped Title Text4">
+    </div>
+
+    </a>
     </section>
-</section>
 <section class="cont3">
     <section class="navbar">
         <div class="navitem"><a href="#a1">About</a></div>
@@ -28,7 +42,7 @@
         <div class="navitem"><a href="#a5">Kayal</a></div>
     </section>
 </section>
-<div id="a1"></div>
+<div></div>
     <div class="linediv"></div>
     <section  class="container2">
         <section class="grida1">
@@ -102,7 +116,9 @@
         <section class="grida2">
             <div class="flexconta">
                 <div class="flexcont1">
-                    <h2>We Were Here</h2>
+                    <video autoplay loop muted poster="assets/wwh_poster.png" id="bgvid">
+                        <source src="assets/wwh_kin.mp4" type="video/mp4">
+                    </video>
                 </div>
             </div>
             <div class="flexcontb">
@@ -131,7 +147,9 @@
         <section class="grida1">
             <div class="flexconta">
                 <div class="flexcont2">
-                    <h2>Some Thoughts I Had</h2>
+                    <video autoplay loop muted poster="assets/stih_post.png" id="bgvid">
+                        <source src="assets/stih_kin.mp4" type="video/mp4">
+                    </video>
                 </div>
             </div>
             <div class="flexcontb">
@@ -165,7 +183,9 @@
         <section class="grida2">
             <div class="flexconta">
                 <div class="flexcont1">
-                    <h2>Groove Into The Void</h2>
+                    <video autoplay loop muted poster="assets/gitv_post.png" id="bgvid">
+                        <source src="assets/gitv_kin.mp4" type="video/mp4">
+                    </video>
                 </div>
             </div>
             <div class="flexcontb">
@@ -200,7 +220,9 @@
         <section class="grida1">
             <div class="flexconta">
                 <div class="flexcont2">
-                    <h2>Kayal</h2>
+                    <video autoplay loop muted poster="assets/k_post.png" id="bgvid">
+                        <source src="assets/k_kin.mp4" type="video/mp4">
+                    </video>
                 </div>
             </div>
             <div class="flexcontb">
